fix width on small screens

--- a/src/Components/NoPoster/NoPoster.module.css
+++ b/src/Components/NoPoster/NoPoster.module.css
@@ -1,16 +1,19 @@
 .no-poster {
   display: flex;
   height: 450px;
+  width: 300px;
   min-width: 300px;
   border: 1px solid var(--border);
   align-items: center;
   justify-content: center;
   color: var(--text);
   box-sizing: border-box;
+  align-self: center;
 }
 
 @media (max-width: 735px) {
   .no-poster {
+    width: 225px;
     min-width: 225px;
     height: 340px;
   }
